<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/green_gradient_background"
              android:gravity="center_horizontal">
    <View
        android:layout_width="fill_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_race"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="2dp" 
        >
        <LinearLayout
            android:id="@+id/createRaces_form_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
	        <EditText  
			    android:id="@+id/EditTextRaceTitle"  
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_title_hint"
			    android:inputType="textPersonName"  
			    android:layout_width="fill_parent">  
			</EditText>
			
	        <EditText  
			    android:id="@+id/EditTextRaceDetails" 
			    android:gravity="top" 
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_details_hint"  
			    android:inputType="textMultiLine"  
			    android:lines="5"  
			    android:layout_width="fill_parent">
			</EditText>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceDate"
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_date_hint" 
			    android:inputType="text" 
			    android:layout_width="fill_parent">
			</EditText>
	        
	        <EditText
	            android:id="@+id/EditTextRacePoints"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/race_points_hint"
	            android:inputType="number" >
			</EditText>
	        
	        <EditText
	            android:id="@+id/EditTextRacePrizes"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/race_prizes_hint"
	            android:inputType="text" >
			</EditText>
	        
	        <EditText
	            android:id="@+id/EditTextRaceWinners"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/race_winners_hint"
	            android:inputType="number" >
			</EditText>
	        
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/button_create_race"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="20sp"
        android:onClick="createRaceButtonClicked"
        android:text="Create this race!" />

</LinearLayout>