<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/green_gradient_background"
              android:gravity="center_horizontal"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/login_title_font_size"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            />

    <ImageView
            android:layout_width="215dp"
            android:layout_height="175dp"
            android:src="@drawable/race_image"
            android:contentDescription="@null"
            android:background="@color/black"
            android:padding="3dp"
            android:layout_marginBottom="40dp"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:inputType="text"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:inputType="text"
            />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:checked="true"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/green_button"
        android:layout_marginTop="50dp"

        />


</LinearLayout>

