<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/green_gradient_background"
              android:gravity="center_horizontal">

    <!-- The header that contains the 3 buttons for switching between the main screens -->
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="2dp"
            >
        <!-- Note: the FrameLayout is only here to provide a black border for the LinearLayout -->
        <LinearLayout
                android:id="@+id/searchRaces_header_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/header_buttons_layout_background"
                >
            <Button
                    android:id="@+id/searchRaces_header1"
                    android:text="@string/your_current_races"
                    android:onClick="currentRacesButtonClicked"
                    style="@style/header_button"
                    />
            <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    />
            <Button
                    android:id="@+id/searchRaces_header2"
                    android:text="@string/search_for_races"
                    android:onClick="searchForRacesButtonClicked"
                    style="@style/header_button"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    />
            <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    />
            <Button
                    android:id="@+id/searchRaces_header3"
                    android:text="@string/create_and_manage_race"
                    android:onClick="createManageRaceButtonClicked"
                    style="@style/header_button"
                    />
        </LinearLayout>
    </FrameLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLACEHOLDER"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="200dp"/>

</LinearLayout>