<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/green_gradient_background"
              android:gravity="center_horizontal">

    <!-- The header that contains the 3 buttons for switching between the main screens -->
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="2dp"
            >
        <!-- Note: the FrameLayout is only here to provide a black border for the LinearLayout -->
        <LinearLayout
                android:id="@+id/createManageRace_header_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/header_buttons_layout_background"
                >
            <Button
                    android:id="@+id/createManageRace_header1"
                    android:text="@string/your_current_races"
                    android:onClick="currentRacesButtonClicked"
                    style="@style/header_button"
                    />
            <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    />
            <Button
                    android:id="@+id/createManageRace_header2"
                    android:text="@string/search_for_races"
                    android:onClick="searchForRacesButtonClicked"
                    style="@style/header_button"
                    />
            <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    />
            <Button
                    android:id="@+id/createManageRace_header3"
                    android:text="@string/create_and_manage_race"
                    android:onClick="createManageRaceButtonClicked"
                    style="@style/header_button"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:id="@+id/createRaces_form_list" >

        <LinearLayout
            android:layout_width="fill_parent"
   		    android:padding="10dp"
        	android:background="@drawable/grey_gradient_background"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView 
                android:text="Race Name:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        <EditText  
			    android:id="@+id/EditTextRaceTitle"  
			    android:layout_height="wrap_content"  
			    android:inputType="textPersonName"  
			    android:layout_width="fill_parent"/>
			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Location:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        <EditText  
			    android:id="@+id/EditTextRaceLocation"  
			    android:layout_height="wrap_content"  
			    android:inputType="textPersonName"  
			    android:hint="Name of Business and Address"
			    android:layout_width="fill_parent"/>
			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Description:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceDetails" 
			    android:gravity="top" 
			    android:layout_height="wrap_content"  
			    android:inputType="textMultiLine"  
			    android:lines="4"  
			    android:layout_width="fill_parent"/>
	        
	        <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Start Date:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceStartDate"
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_date_hint" 
			    android:inputType="text" 
			    android:layout_width="fill_parent"/>
	        
	         <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race End Date:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceEndDate"
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_date_hint" 
			    android:inputType="text" 
			    android:layout_width="fill_parent"/>

 			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Prizes to be Won:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
			<EditText  
			    android:id="@+id/EditTextRacePrizes" 
			    android:gravity="top" 
			    android:layout_height="wrap_content"  
			    android:inputType="textMultiLine"  
			    android:lines="2"  
			    android:layout_width="fill_parent"/>
	        
	       <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Number of Winners:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
			<EditText
	            android:id="@+id/EditTextRaceWinners"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number" >
			</EditText>
	        
    	<Button
        	android:id="@+id/button_create_race"
        	android:layout_width="match_parent"
        	android:layout_height="60dp"
        	android:textSize="20sp"
        	android:onClick="createRaceButtonClicked"
        	android:text="Create this race!!" 
        	android:background="@drawable/green_gradient_background"/>
	    </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:id="@+id/editRaces_form_list" >

        <LinearLayout
            android:layout_width="fill_parent"
   		    android:padding="10dp"
        	android:background="@drawable/grey_gradient_background"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView 
                android:text="Race Name:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        <EditText  
			    android:id="@+id/EditTextRaceTitle_e"  
			    android:layout_height="wrap_content"  
			    android:inputType="textPersonName"  
			    android:layout_width="fill_parent"/>
			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Location:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        <EditText  
			    android:id="@+id/EditTextRaceLocation_e"  
			    android:layout_height="wrap_content"  
			    android:inputType="textPersonName"  
			    android:hint="Name of Business and Address"
			    android:layout_width="fill_parent"/>
			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Description:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceDetails_e" 
			    android:gravity="top" 
			    android:layout_height="wrap_content"  
			    android:inputType="textMultiLine"  
			    android:lines="4"  
			    android:layout_width="fill_parent"/>
	        
	        <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race Start Date:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceStartDate_e"
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_date_hint" 
			    android:inputType="text" 
			    android:layout_width="fill_parent"/>
	        
	         <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Race End Date:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
	        <EditText  
			    android:id="@+id/EditTextRaceEndDate_e"
			    android:layout_height="wrap_content"  
			    android:hint="@string/race_date_hint" 
			    android:inputType="text" 
			    android:layout_width="fill_parent"/>

 			<View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Prizes to be Won:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
			<EditText  
			    android:id="@+id/EditTextRacePrizes_e" 
			    android:gravity="top" 
			    android:layout_height="wrap_content"  
			    android:inputType="textMultiLine"  
			    android:lines="2"  
			    android:layout_width="fill_parent"/>
	        
	       <View
        		android:layout_width="fill_parent"
        		android:layout_height="15dp" />
			
			<TextView 
                android:text="Number of Winners:"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
	        
			<EditText
	            android:id="@+id/EditTextRaceWinners_e"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number" >
			</EditText>
	        
    	<Button
        	android:id="@+id/button_edit_race"
        	android:layout_width="match_parent"
        	android:layout_height="60dp"
        	android:textSize="20sp"
        	android:onClick="editRaceButtonClicked"
        	android:text="Edit this race!!" 
        	android:background="@drawable/green_gradient_background"/>
	    </LinearLayout>
    </ScrollView>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        />

    <!-- LEADERBOARD SECTION -->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_updates"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            />

    <!-- Stores and displays all of the Customer Update views -->
    <ListView
            android:id="@+id/current_races_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            />

    <TextView
            android:id="@+id/current_races_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/pending_updates_empty"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            />

</LinearLayout>